margin-bottom to stop content hiding behind footer

--- a/pages/services/services.css
+++ b/pages/services/services.css
@@ -8,13 +8,14 @@
   }
 
   .navbarrow{
-    margin-bottom: 1vh;
+    margin-bottom: 2vh;
   }
 
   .row {
     display: flex;
     flex-wrap: wrap;
     padding: 0 1vh;
+    margin-bottom: 10vh;
   }
   
   .row::after {
@@ -47,16 +48,17 @@
   }
 
   .container {
-    margin-top: 1vh;
+    margin-top: 5vh;
     position: relative;
     text-align: center;
     color: white;
-    /*border: 1pt solid white;*/
+    padding: 2vw;
+    border: 3pt solid white;
   }
 
   .top {
     position: absolute;
-    top: 40px;
+    top: 0px;
     left: 50%;
     transform: translate(-50%, -50%);
     padding-left: 12px;
